--- a/Exercise/5.2_data_wrangling_json/5.2_ dataWrangling_json solution.ipynb
+++ b/Exercise/5.2_data_wrangling_json/5.2_ dataWrangling_json solution.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,10 +116,13 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name_clean</th>\n    </tr>\n    <tr>\n      <th>code</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>Urban development</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Human development</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Social dev/gender/inclusion</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Social protection and risk management</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Trade and integration</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Financial and private sector development</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Rule of law</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Public sector governance</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Environment and natural resources management</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Rural development</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Economic management</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 5
     }
    ],
    "source": [
+    "# also load in the raw json to wrangle the nested fields later\n",
+    "with open('data\\\\world_bank_projects.json') as f:\n",
+    "    raw = json.load(f)\n",
     "df_themes = json_normalize(raw, 'mjtheme_namecode', ['id'])\n",
     "df_themes_name_to_code = df_themes.groupby('name').code.max().sort_values(ascending=False)\n",
     "#drop the missing name rows\n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +149,7 @@
       "text/plain": "{'9': 'Urban development',\n '8': 'Human development',\n '7': 'Social dev/gender/inclusion',\n '6': 'Social protection and risk management',\n '5': 'Trade and integration',\n '4': 'Financial and private sector development',\n '3': 'Rule of law',\n '2': 'Public sector governance',\n '11': 'Environment and natural resources management',\n '10': 'Rural development',\n '1': 'Economic management'}"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "source": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +173,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>code</th>\n      <th>name</th>\n      <th>id</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>8</td>\n      <td>Human development</td>\n      <td>P129828</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11</td>\n      <td>Environment and natural resources management</td>\n      <td>P129828</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Economic management</td>\n      <td>P144674</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6</td>\n      <td>Social protection and risk management</td>\n      <td>P144674</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Trade and integration</td>\n      <td>P145310</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1494</th>\n      <td>10</td>\n      <td>Rural development</td>\n      <td>P117243</td>\n    </tr>\n    <tr>\n      <th>1495</th>\n      <td>9</td>\n      <td>Urban development</td>\n      <td>P126321</td>\n    </tr>\n    <tr>\n      <th>1496</th>\n      <td>8</td>\n      <td>Human development</td>\n      <td>P126321</td>\n    </tr>\n    <tr>\n      <th>1497</th>\n      <td>5</td>\n      <td>Trade and integration</td>\n      <td>P126321</td>\n    </tr>\n    <tr>\n      <th>1498</th>\n      <td>4</td>\n      <td>Financial and private sector development</td>\n      <td>P126321</td>\n    </tr>\n  </tbody>\n</table>\n<p>1499 rows × 3 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 7
     }
    ],
    "source": [
@@ -181,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +194,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>code</th>\n      <th>name</th>\n      <th>id</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 8
     }
    ],
    "source": [
