--- a/Exercise/10.3_naive_bayes/naive_bayes/Mini_Project_Naive_Bayes.ipynb
+++ b/Exercise/10.3_naive_bayes/naive_bayes/Mini_Project_Naive_Bayes.ipynb
@@ -963,6 +963,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Accuracy on training data: 0.777040\nAccuracy on test data:     0.651304\n"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X, y = make_xy(critics, vectorizer)\n",
+    "xtrain=X[mask]\n",
+    "ytrain=y[mask]\n",
+    "xtest=X[~mask]\n",
+    "ytest=y[~mask]\n",
+    "\n",
+    "clf = MultinomialNB().fit(xtrain, ytrain)\n",
+    "\n",
+    "#your turn. Print the accuracy on the test and training dataset\n",
+    "training_accuracy = clf.score(xtrain, ytrain)\n",
+    "test_accuracy = clf.score(xtest, ytest)\n",
+    "\n",
+    "print(\"Accuracy on training data: {:2f}\".format(training_accuracy))\n",
+    "print(\"Accuracy on test data:     {:2f}\".format(test_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {
     "collapsed": true,
@@ -990,31 +1023,6 @@
     "\n",
     "clf = RandomForestRegressor(n_jobs=2).fit(xtrain, ytrain)\n",
     "\n",
-    "training_accuracy = clf.score(xtrain, ytrain)\n",
-    "test_accuracy = clf.score(xtest, ytest)\n",
-    "\n",
-    "print(\"Accuracy on training data: {:2f}\".format(training_accuracy))\n",
-    "print(\"Accuracy on test data:     {:2f}\".format(test_accuracy))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "vectorizer = TfidfVectorizer()\n",
-    "X, y = make_xy(critics, vectorizer)\n",
-    "xtrain=X[mask]\n",
-    "ytrain=y[mask]\n",
-    "xtest=X[~mask]\n",
-    "ytest=y[~mask]\n",
-    "\n",
-    "clf = MultinomialNB().fit(xtrain, ytrain)\n",
-    "\n",
-    "#your turn. Print the accuracy on the test and training dataset\n",
     "training_accuracy = clf.score(xtrain, ytrain)\n",
     "test_accuracy = clf.score(xtest, ytest)\n",
     "\n",
